--- a/src/xgp3.0.0/upload/application/libraries/battle_engine/views/report.html
+++ b/src/xgp3.0.0/upload/application/libraries/battle_engine/views/report.html
@@ -6,10 +6,16 @@
 </head>
 <body>
 <center>
+    <cite><font color="red"> PRESENTATION </font></cite><br /><br />
+    <?php $_st = 'Attacker'; $_playerGroup =  $this->getResultAttackersFleetOnRound('START'); include('playerGroup.html');?>
+    <?php $_st = 'Defender'; $_playerGroup =  $this->getResultDefendersFleetOnRound('START'); include('playerGroup.html');?>
+    _____________________________________________________
+    <br>
+    <cite><font color="red"> BATTLE </font></cite><br /><br />
     <?php for ( $_i=1;$_i<=$this->getLastRoundNumber();$_i++){ ?>
-        <?php $_round = $this->getRound($_i - 1); include('round.html'); ?>
+        <?php $_round = $this->getRound($_i);$_roundBefore = $this->getRound($_i - 1); include('round.html'); ?>
     <?php } ?>
-    <cite> END OF BATTLE </cite>
+    <cite><font color="red"> END OF BATTLE </font></cite><br /><br />
     <?php $_st = 'Attacker'; $_playerGroup =  $this->getResultAttackersFleetOnRound('END'); include('playerGroup.html');?>
     <?php $_st = 'Defender'; $_playerGroup =  $this->getResultDefendersFleetOnRound('END'); include('playerGroup.html');?>
     <?php if($this->attackerHasWin()) { include('attackers_win.html');} ?>
