--- a/src/xgp3.0.0/upload/application/libraries/battle_engine/views/round.html
+++ b/src/xgp3.0.0/upload/application/libraries/battle_engine/views/round.html
@@ -1,9 +1,15 @@
 <font size=4><cite>Round <?php echo $_i ?></cite></font>
-
 <br><br>
-<?php $_st = 'Attacker'; $_playerGroup =  $_round->getAfterBattleAttackers($_i); include('playerGroup.html');?> 
+<?php
+$_st = 'Attacker'; 
+$_playerGroup = (isset($_roundBefore))?$_roundBefore->getAfterBattleAttackers():$_round->getAfterBattleAttackers(); 
+include('playerGroup.html');
+?> 
 <br>
-<?php $_st = 'Defender'; $_playerGroup =  $_round->getAfterBattleDefenders($_i); include('playerGroup.html');?>
+<?php 
+$_st = 'Defender'; 
+$_playerGroup = (isset($_roundBefore))?$_roundBefore->getAfterBattleDefenders():$_round->getAfterBattleDefenders();
+include('playerGroup.html');?>
 <br>
 <?php include('round_info.html'); ?>
 
