--- a/src/xgp3.0.0/upload/application/styles/css/admin.css
+++ b/src/xgp3.0.0/upload/application/styles/css/admin.css
@@ -6,3 +6,4 @@ body{padding-top:60px;padding-bottom:40px}
 .small_font{font-size:12px}
 .bold_font{font-weight:bold}
 td.align_center{text-align:center}
+.greyout{-webkit-filter:grayscale(100%);-moz-filter:grayscale(100%);-o-filter:grayscale(100%);-ms-filter:grayscale(100%);filter:grayscale(100%);}
