battle engines fixes

--- a/app/Libraries/BattleEngine/Views/attackers_win.html
+++ b/app/Libraries/BattleEngine/Views/attackers_win.html
@@ -1,7 +1,7 @@
-<?php 
-$lng = LangManager::getInstance();
-$steal = $this->getSteal(); 
-$metal = number_format($steal['metal'],0, ',', '.'); 
+<?php
+$lng = App\Libraries\BattleEngine\Utils\LangManager::getInstance();
+$steal = $this->getSteal();
+$metal = number_format($steal['metal'],0, ',', '.');
 $crystal = number_format($steal['crystal'],0, ',', '.');
 $deuterium = number_format($steal['deuterium'],0, ',', '.');
 ?>
