--- a/app/Libraries/BattleEngine/Views/details.html
+++ b/app/Libraries/BattleEngine/Views/details.html
@@ -1,5 +1,5 @@
-<?php 
-$lng = LangManager::getInstance(); 
+<?php
+$lng = App\Libraries\BattleEngine\Utils\LangManager::getInstance();
 $debris = $this->getDebris();
 $Mdebris = number_format($debris[0],0, ',', '.');
 $Cdebris = number_format($debris[1],0, ',', '.');
