--- a/app/Libraries/BattleEngine/Views/draw.html
+++ b/app/Libraries/BattleEngine/Views/draw.html
@@ -1,1 +1,1 @@
-<?php echo LangManager::getInstance()->getDraw(); ?> <br />
+<?php echo App\Libraries\BattleEngine\Utils\LangManager::getInstance()->getDraw(); ?> <br />
