--- a/app/Libraries/BattleEngine/Views/defenders_win.html
+++ b/app/Libraries/BattleEngine/Views/defenders_win.html
@@ -1,1 +1,1 @@
-<?php echo LangManager::getInstance()->getDefendersHasWon(); ?> <br />
+<?php echo App\Libraries\BattleEngine\Utils\LangManager::getInstance()->getDefendersHasWon(); ?> <br />
