--- a/app/Libraries/BattleEngine/Views/fleet.html
+++ b/app/Libraries/BattleEngine/Views/fleet.html
@@ -1,8 +1,8 @@
 <table class="lined widthFull" style="width:100%;border-collapse:collapse;border: 1px #415680 solid;margin-bottom: 10px;">
     <tr>
         <td style="text-align:center">
-            <?php echo $_st; ?> <?php echo $_fleet->getName(); ?> [<?php echo $_fleet->getGalaxy(); ?>:<?php echo $_fleet->getSystem(); ?>:<?php echo $_fleet->getPlanet(); ?>]<br> 
-            <?php echo LangManager::getInstance()->getTechs($_fleet->getWeaponsTech(), $_fleet->getShieldsTech(), $_fleet->getArmourTech()); ?>
+            <?php echo $_st; ?> <?php echo $_fleet->getName(); ?> [<?php echo $_fleet->getGalaxy(); ?>:<?php echo $_fleet->getSystem(); ?>:<?php echo $_fleet->getPlanet(); ?>]<br>
+            <?php echo App\Libraries\BattleEngine\Utils\LangManager::getInstance()->getTechs($_fleet->getWeaponsTech(), $_fleet->getShieldsTech(), $_fleet->getArmourTech()); ?>
         </td>
     </tr>
     <tr>
@@ -11,14 +11,14 @@
                 <thead>
                     <tr>
                         <?php foreach($_fleet as $_shipID => $_ship) { ?>
-                            <th><?php echo LangManager::getInstance()->getShipName($_shipID); ?></th>
+                            <th><?php echo App\Libraries\BattleEngine\Utils\LangManager::getInstance()->getShipName($_shipID); ?></th>
                         <?php } ?>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <?php foreach($_fleet as $_shipID => $_ship) { ?>    
-                            <th><?php echo $_ship->getCount(); ?></th>                   
+                        <?php foreach($_fleet as $_shipID => $_ship) { ?>
+                            <th><?php echo $_ship->getCount(); ?></th>
                         <?php } ?>
                     </tr>
                 </tbody>
